@@ -1,3 +1,8 @@
+2015-02-02  Natalia Portillo  <claunia@claunia.com>
+
+	* Checksums/CRC16Context.cs:
+	  Corrected poly, solved endian problem
+
 2014-04-21  Natalia Portillo  <claunia@claunia.com>
 
 	* ImagePlugins/TeleDisk.cs:
